-----
 4.1 (in progress)
-----

- Added support for multiple target platforms
- Added Xbox 360 support to Visual Studio 2005/2008
- Bug 2564404: FatalWarnings has no effect with gmake target
- Bug 2550759: pchheader option has wrong type
- Support links and libdirs for Visual Studio static libraries
- Fail gracefully when list is assigned to string field
- Changed GCC flags to -fno-exceptions and -fno-rtti


-----
 4.0
-----

This version is a complete rewrite of Premake.

- A new, more readable and extensible syntax for projects
- More robust syntax validation
- A new command-line format, with better argument validation
- Improved path handling across all project settings
- Upgraded to Lua 5.1.4
- Many, many bug fixes

RC4 -> Final

- Set Mac OS X linker flags for Code::Blocks
- Bug 2533504: Files above project root not added to project

RC3 -> RC4

- Embed scripts instead of bytecodes to avoid portability issues
- solution() and project() now only set the active object when 
  called with a name; remains unchanged otherwise

RC2 -> RC3

- Bug: GCC Windows release builds of Premake4 crash on script errors
- Patched Lua to load precompiled bytecodes on PPC architectures.
- Display paths of generated files

RC1 -> RC2

- Enabled use of absolute Windows paths to different drive letter
- Bug: Post-build commands run before build on Code::Blocks
- Removed FatalWarnings build flag
- Fixed GCC 4.2 warnings (Ryan Pusztai)
- Enable Windows linking to shared libraries even with NoImportLib
  flag set (just in case)
- Fixed handling of paths in links
- Added "ToolsVersion" attribute to VS2005 and VS2008 C# projects
- Fixed separator between library dependencies in C++ makefiles
- Added missing os.copyfile() function
- Bug: Sometimes takes a long time to complete on Linux
- Enabled Lua popen support on Linux and Mac OS X


-----
 3.7
-----

- Updated Lua to 5.1.3
- Added new CodeLite support target (Ryan Pusztai)