@@ -2,8 +2,9 @@
  4.1 (in progress)
 -----
 
-- Added support for multiple target platforms
+- Added support for cross-compiling target platforms
 - Added Xbox 360 support to Visual Studio 2005/2008
+- Added Mac OS X universal binary support
 - Bug 2564404: FatalWarnings has no effect with gmake target
 - Bug 2550759: pchheader option has wrong type
 - Support links and libdirs for Visual Studio static libraries
